# http-c-erver

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  echo_server.c  main.c  main.h  pse_2024.h  requirements.md  todo.md
assets/: projectplan.txt
git-hooks/: pre-commit
lib/file_lib/: file_lib.c  file_lib.h
lib/http-lib/: httplib-test.c  httplib.c  httplib.h
lib/string_lib/: string_lib.c  string_lib.h
lib/testing/: test-lib.c  test-lib.h
lib/testing/http/: pewpewlaz0rt4nk.py
lib/testing/unit/: test-lib.c  test-lib.h
scripts/: format.sh  install-git-hooks.sh  todo.sh
src/: echo_server.c
src/basic_http_server/: basic_http_server.c  basic_http_server.h
src/htdocs/default/: index.html
src/http_models/: http_models.c  http_models.h
src/http_parser/: http_parser.c  http_parser.h
src/http_router/: http_router.c  http_router.h
src/http_server/: http_server.c  http_server.h
src/http_server/request_validation/: request_validation.c  request_validation.h
src/root/: index.html
src/root/default/: index.html
src/root/default/js/: javascript.js
src/root/intern/: index.html
tests/: CMakeLists.txt  README.md  httplib-test.c  pse_2024_tests.cbp  tests.c
tests/http/: pewpewlaz0rt4nk.py  tests.py
tests/http-lib/: http-lib_test.c
tests/http_models/: http_models_test.c  http_models_test.h
tests/http_parser/: http_parser_test.c  http_parser_test.h
tests/http_server/: http_server_test.c
tests/lib/http-lib/: test_httplib.c
tests/unit/: tests.c
tests/unit/http-lib/: http-lib_test.c  http-lib_test.h
tests/unit/http_models/: http_models_test.c
tests/unit/http_parser/: http_parser_test.c
tests/unit/http_router/: http_router_test.c  http_router_test.h
tests/unit/http_server/: http_server_test.c  http_server_test.h
tests/unit/http_server/request_validation/: request_validation_test.c  request_validation_test.h
